--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -5,7 +5,10 @@
     <title>title</title>
   </head>
   <body>
-    <h1>Pig Latinizer</h1>
-  
+    <h1>Pig Latinizer!</h1>
+      <form method="POST" action="/piglatinize">
+        <p>Enter your phrase: <input type="user_phrase"></p>
+         <input type="submit" id="submit">
+      </form>
   </body>
 </html>
